# uartremote

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: auth.rs  error.rs  lib.rs  protocol.rs  serial.rs  writer.rs
desktop/: index.html  package-lock.json  package.json
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
