[workspace]
members = ["core", "server", "client", "desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.6"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
uuid = { version = "1.11", features = ["v4", "serde"] }
