[package]
name = "uart-remote-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
serde_json.workspace = true
serialport.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uart-remote-core = { path = "../core" }
uuid.workspace = true
