[package]
name = "uart-remote-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
tauri = { version = "2.0", features = [] }
tokio.workspace = true
tokio-tungstenite.workspace = true
uart-remote-core = { path = "../../core" }
uuid.workspace = true
